add jvm args. fix aangifte sentence