@@ -24,3 +24,12 @@ ScoverageSbtPlugin.ScoverageKeys.coverageMinimum := 70
 ScoverageSbtPlugin.ScoverageKeys.coverageFailOnMinimum := true
 
 ScoverageSbtPlugin.ScoverageKeys.coverageHighlighting := true
+
+fork in run := true
+
+javaOptions in run ++= Seq(
+  "-Xms2G",
+  "-Xmx2G",
+  "-XX:MaxPermSize=2g",
+  "-XX:+UseConcMarkSweepGC"
+)
